--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   <div class="container">
     <div class="row">
       <div class="col-sm-6" id="intro-name">
-        <h1>Hey, I am <br>Frank S Pelletier</h1>
+        <h1>I'm Frank S Pelletier</h1>
         <p id="sub-intro">A <del>detale</del>
            detail-oriented kinda guy</p>
       </div>
