Updated Footer Message

--- a/index.html
+++ b/index.html
@@ -78,18 +78,22 @@
       <br> As someone who thrives working with others, 
 </p>
 <h2>What I have done so far:</h2> <br>
-      <li>
-        <ul>Associates in Accounting with several years working under an accountant specializing in Tax Preparation and Financial Planning </ul>
-        <ul>Bachelor's in Management Information System that involved leading and participating in multiple group project settings.</ul>
-        <ul>
+      <ul>
+      <li>Associates in Accounting with several years working under an accountant specializing in Tax Preparation and Financial Planning </li>
+      <li></li>
+        <ul>Bachelor's in Management Information System that involved leading and participating in multiple group project settings.</li>
+        <li>
         Created a website for one of my jobs to help modernize them and give a better presence in the developing market around them.
-        </ul>
-      </li> 
+        </li>
+      </ul> 
       
 
       <h2>What I can do for you:</h2>
       <li>
-        <ul> Strong interpersonal and client skills. With a strong history of working in customer service, I've learned the essentials of having to work
+        <h3><ul>Enhanced Communication</ul></h3>
+        <ul> Strong interpersonal and client skills. With a strong history of working in customer service, I've learned the essentials of having to work</ul>
+        <h3><ul>Strong Work Ethic</ul></h3>
+        <ul>Carrying a strong GPA and work history, I have no issue</ul>
       </li>
   </div>
 
@@ -236,7 +240,7 @@
 <!-- Start of Footer Section -->
 <footer>
   <p>
-    ** This is a WIP and will be updated as I feel fit
+    ** This is a WIP and will update frequently
   </p>
   <p>
     &copy; Modified from FCC portfolio for my purposes
