--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@
 <section id="welcome-section" class="welcome-section">
   <div class="container">
     <div class="row">
-      <div class="col-sm-8" id="intro-name">
-        <h1>I'm Frank S Pelletier</h1>
+      <div class="col-sm-6" id="intro-name">
+        <h1>Hey, I am <br>Frank S Pelletier</h1>
         <p id="sub-intro">A <del>detale</del>
            detail-oriented kinda guy</p>
       </div>
-      <div class="col-sm-4">
+      <div class="col-sm-6">
         <img class="selfie"
              src="2.png" 
              alt="picture of myself">
@@ -72,29 +72,11 @@
 <!-- Start of About Me Section -->
 <section id="about-me" class="contact-section">
   <div class="contact-section-header">
-    <h3>Thanks for checking out my page!</h3>
-    <p>Pleasure to meet you, virtually! I like to create and enhance where possible. 
+    <h2>Thanks for checking out my page!</h2>
+    <p>Greetings to you and thanks for checking out my page. I like to create and enhance where possible. 
       <br>Being able to help others and solve problems, seeking an answer.
       <br> As someone who thrives working with others, 
-</p>
-<h2>What I have done so far:</h2> <br>
-      <ul>
-      <li>Associates in Accounting with several years working under an accountant specializing in Tax Preparation and Financial Planning </li>
-      <li></li>
-        <ul>Bachelor's in Management Information System that involved leading and participating in multiple group project settings.</li>
-        <li>
-        Created a website for one of my jobs to help modernize them and give a better presence in the developing market around them.
-        </li>
-      </ul> 
-      
-
-      <h2>What I can do for you:</h2>
-      <li>
-        <h3><ul>Enhanced Communication</ul></h3>
-        <ul> Strong interpersonal and client skills. With a strong history of working in customer service, I've learned the essentials of having to work</ul>
-        <h3><ul>Strong Work Ethic</ul></h3>
-        <ul>Carrying a strong GPA and work history, I have no issue</ul>
-      </li>
+    </p>
   </div>
 
 </section>
@@ -102,10 +84,9 @@
 
 <!-- Start of Portfolio Section -->
 <section id="projects" class="projects-section">
-  <h2 class="projects-section-header">Some notable achievements</h2>
+  <h2 class="projects-section-header">Some Things I Worked On</h2>
 
   <div class="projects-grid">
-    <p>FCC Projects</p>
     <a
       href="https://codepen.io/freeCodeCamp/full/zNqgVx"
       target="_blank"
@@ -118,7 +99,7 @@
       />
       <p class="project-title">
         <span class="code">&lt;</span>
-        FCC Tribute Timeline
+        Tribute Timeline
         <span class="code">&#47;&gt;</span>
       </p>
     </a>
@@ -134,7 +115,7 @@
       />
       <p class="project-title">
         <span class="code">&lt;</span>
-        FCC Mock Product Landing
+        Mock Product Landing
         <span class="code">&#47;&gt;</span>
       </p>
     </a>
@@ -150,7 +131,7 @@
       />
       <p class="project-title">
         <span class="code">&lt;</span>
-        FCC Technical Documentation (MTG)
+        MTG Rules Manual
         <span class="code">&#47;&gt;</span>
       </p>
     </a>
@@ -166,7 +147,7 @@
       />
       <p class="project-title">
         <span class="code">&lt;</span>
-        (Personal Project) Restaurant Website
+        Restaurant Website
         <span class="code">&#47;&gt;</span>
       </p>
     </a>
@@ -240,7 +221,7 @@
 <!-- Start of Footer Section -->
 <footer>
   <p>
-    ** This is a WIP and will update frequently
+    ** This is a WIP and will be updated as I feel fit
   </p>
   <p>
     &copy; Modified from FCC portfolio for my purposes
