--- a/index.html
+++ b/index.html
@@ -177,12 +177,12 @@
   >
     <img
       class="project-image"
-      src="https://raw.githubusercontent.com/veltaine/FCCPortfolio/main/chinariver.jpg"
+      src="https://github.com/veltaine/portfolio/blob/master/chaff2treasure.png"
       alt="project"
     />
     <p class="project-title">
       <span class="code">&lt;</span>
-      Hobby Product Landing
+      Chaff 2 Treasure
       <span class="code">&#47;&gt;</span>
     </p>
   </a>
