--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 </head>
 <body>
   
+<!-- FCC Testing Link -->
+<script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
 <link
   rel="stylesheet"
@@ -70,7 +72,7 @@
 <!-- End of Welcome Section -->
 
 <!-- Start of About Me Section -->
-<section id="about-me" class="contact-section">
+<section id="about-me" class="about-me">
   <div class="contact-section-header">
     <h3>Thanks for checking out my page!</h3>
     <p>Pleasure to meet you, virtually! I like to create and enhance where possible. 
@@ -102,10 +104,10 @@
 
 <!-- Start of Portfolio Section -->
 <section id="projects" class="projects-section">
-  <h2 class="projects-section-header">Some notable achievements</h2>
-
+  <h2 class="projects-section-header">What I've Created</h2>
+<h2>FCC Responsive Design Portfolio</h2>
   <div class="projects-grid">
-    <p>FCC Projects</p>
+    
     <a
       href="https://codepen.io/freeCodeCamp/full/zNqgVx"
       target="_blank"
@@ -118,7 +120,7 @@
       />
       <p class="project-title">
         <span class="code">&lt;</span>
-        FCC Tribute Timeline
+        FCC: Tribute
         <span class="code">&#47;&gt;</span>
       </p>
     </a>
@@ -134,7 +136,7 @@
       />
       <p class="project-title">
         <span class="code">&lt;</span>
-        FCC Mock Product Landing
+        FCC: Product Landing
         <span class="code">&#47;&gt;</span>
       </p>
     </a>
@@ -151,10 +153,13 @@
       />
       <p class="project-title">
         <span class="code">&lt;</span>
-        FCC Technical Documentation (MTG)
+        FCC: Technical Documentation
         <span class="code">&#47;&gt;</span>
       </p>
     </a>
+    </div>
+    <h2>Personal Projects</h2>
+    <div class="projects-grid">
     <a
       href="http://chinariver.biz"
       target="_blank"
@@ -167,7 +172,7 @@
       />
       <p class="project-title">
         <span class="code">&lt;</span>
-        (Personal Project) Restaurant Website
+        China River Website
         <span class="code">&#47;&gt;</span>
       </p>
     </a>
@@ -183,7 +188,7 @@
     />
     <p class="project-title">
       <span class="code">&lt;</span>
-      Chaff 2 Treasure
+      Chaff 2 Treasure Website
       <span class="code">&#47;&gt;</span>
     </p>
   </a>
@@ -202,8 +207,8 @@
 <!-- Start of Contact Section -->
 <section id="contact" class="contact-section">
   <div class="contact-section-header">
-    <h2>Let's nitpick together sometime...</h2>
-    <p>Let's have a chat over coffee/tea sometime! How do you take yours? I take my coffee black.</p>
+    <h2>Let's make magic happen</h2>
+    <p></p>I enjoy my coffee black, what would you like?</p>
   </div>
   <div class="contact-links">
     <a
@@ -243,9 +248,9 @@
   <p>
     ** This is a WIP and will update frequently
   </p>
-  <p>
-    &copy; Modified from FCC portfolio for my purposes
-  </p>
+  <p><a href="https://codepen.io/freeCodeCamp/full/zNBOYG">
+    &copy; FCC: Personal Portfolio
+  </p></a>
 </footer>
 
 <!-- End of Footer Section and Closing HTML tag -->
