--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 <!-- End of Welcome Section -->
 
 <!-- Start of About Me Section -->
-<section id="about-me" class="about-me">
+<section id="about-me" class="about-section">
   <div class="contact-section-header">
     <h3>Thanks for checking out my page!</h3>
     <p>Pleasure to meet you, virtually! I like to create and enhance where possible. 
