--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
 <nav id="navbar" class="nav">
   <ul class="nav-list">
     <li>
-      <a href="#">Frank S. Pelletier</a>
+      <a href="#"
+      class="btn contact-details">Frank S. Pelletier</a>
     </li>
     <li>
       <a href="#about-me">About Me</a>
@@ -246,9 +247,9 @@
 <!-- Start of Footer Section -->
 <footer>
   <p>
-    ** This is a WIP and will update frequently
+    ** Work In Progress 
   </p>
-  <p><a href="https://codepen.io/freeCodeCamp/full/zNBOYG">
+  <p><a class="btn contact-details" href="https://codepen.io/freeCodeCamp/full/zNBOYG">
     &copy; FCC: Personal Portfolio
   </p></a>
 </footer>
