updated profile picture

--- a/index.html
+++ b/index.html
@@ -4,13 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Frank - Customer Extraodinaire</title>
-</head>
-<body>
   
-<!-- FCC Testing Link -->
-<script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
-
-<link
+  <link
   rel="stylesheet"
   href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
   integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay"
@@ -19,7 +14,7 @@
 
 <!-- Latest compiled and minified CSS -->
 <link 
-  href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
+  href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
   rel="stylesheet" 
 />
 <link
@@ -31,10 +26,15 @@
   rel="stylesheet"
 />
 <link rel="stylesheet" href="style.css">
+</head>
 
+<body>
+  
+<!-- FCC Testing Link -->
+<!-- <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script> -->
 
 <!-- Start Of Navigation Bar-->
-<nav id="navbar" class="nav">
+<nav id="navbar" class="navbar navbar-expand-sm bg-dark navbar-dark sticky-top">
   <ul class="nav-list">
     <li>
       <a href="#"
@@ -64,7 +64,7 @@
       </div>
       <div class="col-sm-4">
         <img class="selfie"
-             src="2.png" 
+             src="tobeupdated5.png" 
              alt="picture of myself">
       </div>
     </div>
@@ -75,7 +75,7 @@
 <!-- Start of About Me Section -->
 <section id="about-me" class="about-section">
   <div class="contact-section-header">
-    <h3>Thanks for checking out my page!</h3>
+    <h2>Thanks for checking out my page!</h2>
     <p>Pleasure to meet you, virtually! I like to create and enhance where possible. 
       <br>Being able to help others and solve problems, seeking an answer.
       <br> As someone who thrives working with others, 
@@ -237,6 +237,10 @@
     <a href="tel:978-406-1650" class="btn contact-details"
       ><i class="fas fa-mobile-alt"></i> Call me</a
     >
+    <a class="btn contact-details"
+    >
+      <i class="fas fa-list-alt"></i> Resume
+    </a>
   </div>
 </section>
 <!-- END CONTACT SECTION -->
