--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
 
 <body>
   
-<!-- FCC Testing Link -->
-<!-- <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script> -->
-
+FCC Testing Link -->
+<script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+ 
 <!-- Start Of Navigation Bar-->
 <nav id="navbar" class="navbar navbar-expand-sm bg-dark navbar-dark sticky-top">
   <ul class="nav-list">
@@ -110,7 +110,7 @@
   <div class="projects-grid">
     
     <a
-      href="https://codepen.io/freeCodeCamp/full/zNqgVx"
+      href="https://veltaine.github.io/FCC1_TributePage/"
       target="_blank"
       class="project project-tile"
     >
