migrated FCC project from codepen to github
title explains change

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ FCC Testing Link -->
       </p>
     </a>
     <a
-      href="https://codepen.io/veltaine/pen/YzWLooa"
+      href="https://veltaine.github.io/FCC3_ProductLanding/"
       target="_blank"
       class="project project-tile"
     >
