updated FCC 4: Technical Documentation link
migrated from codepen to Github

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ FCC Testing Link -->
     </a>
 
     <a
-      href="https://codepen.io/freeCodeCamp/full/wgGVVX"
+      href="https://veltaine.github.io/FCC4_Technical_Documentation/"
       target="_blank"
       class="project project-tile"
     >
