--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   href="https://fonts.googleapis.com/css?family=Raleway:700&display=swap"
   rel="stylesheet"
 />
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
@@ -64,7 +64,7 @@ FCC Testing Link -->
       </div>
       <div class="col-sm-4">
         <img class="selfie"
-             src="tobeupdated5.png" 
+             src="images/tobeupdated5.png" 
              alt="picture of myself">
       </div>
     </div>
@@ -96,7 +96,7 @@ FCC Testing Link -->
         <h3><ul>Enhanced Communication</ul></h3>
         <ul> Strong interpersonal and client skills. With a strong history of working in customer service, I've learned the essentials of having to work</ul>
         <h3><ul>Strong Work Ethic</ul></h3>
-        <ul>Carrying a strong GPA and work history, I have no issue</ul>
+        <ul>Carrying a strong GPA and work history, can be very adaptable in learning new situations to best meet the needs of organizations.</ul>
       </li>
   </div>
 
@@ -106,7 +106,7 @@ FCC Testing Link -->
 <!-- Start of Portfolio Section -->
 <section id="projects" class="projects-section">
   <h2 class="projects-section-header">What I've Created</h2>
-<h2>FCC Responsive Design Portfolio</h2>
+<h2>FCC Responsive Page Design Portfolio</h2>
   <div class="projects-grid">
     
     <a
@@ -116,7 +116,7 @@ FCC Testing Link -->
     >
       <img
         class="project-image"
-        src="https://raw.githubusercontent.com/veltaine/portfolio/master/tribute.jpg"
+        src="images/thumbnails/tribute.jpg"
         alt="timeline"
       />
       <p class="project-title">
@@ -126,13 +126,29 @@ FCC Testing Link -->
       </p>
     </a>
     <a
+    href="https://veltaine.github.io/FCC2_SurveyForm/"
+    target="_blank"
+    class="project project-tile"
+  >
+    <img
+      class="project-image"
+      src="images/thumbnails/survey.png"
+      alt="timeline"
+    />
+    <p class="project-title">
+      <span class="code">&lt;</span>
+      FCC: Survey Form
+      <span class="code">&#47;&gt;</span>
+    </p>
+  </a>
+    <a
       href="https://veltaine.github.io/FCC3_ProductLanding/"
       target="_blank"
       class="project project-tile"
     >
       <img
         class="project-image"
-        src="https://raw.githubusercontent.com/veltaine/portfolio/master/productlanding.jpg"
+        src="images/thumbnails/productlanding.jpg"
         alt="project"
       />
       <p class="project-title">
@@ -149,15 +165,16 @@ FCC Testing Link -->
     >
       <img
         class="project-image"
-        src="https://raw.githubusercontent.com/veltaine/portfolio/master/techdoc.jpg"
+        src="images/thumbnails/techdoc.jpg"
         alt="project"
       />
       <p class="project-title">
         <span class="code">&lt;</span>
-        FCC: Technical Documentation
+        FCC: Tech Document
         <span class="code">&#47;&gt;</span>
       </p>
     </a>
+
     </div>
     <h2>Personal Projects</h2>
     <div class="projects-grid">
@@ -200,7 +217,7 @@ FCC Testing Link -->
     href="https://codepen.io/veltaine/"
     class="btn btn-show-all"
     target="_blank"
-    >Show all<i class="fas fa-chevron-right"></i
+    >More<i class="fas fa-chevron-right"></i
   ></a>
 </section>
 <!-- End of Portfolio Section -->
