--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@ FCC Testing Link -->
     >
       <img
         class="project-image"
-        src="https://raw.githubusercontent.com/veltaine/portfolio/master/chinariver.jpg"
+        src="images/thumbnails/chinariver.jpg"
         alt="project"
       />
       <p class="project-title">
@@ -201,7 +201,7 @@ FCC Testing Link -->
   >
     <img
       class="project-image"
-      src="https://raw.githubusercontent.com/veltaine/portfolio/master/chaff2treasure.jpg"
+      src="images/thumbnails/chaff2treasure.jpg"
       alt="project"
     />
     <p class="project-title">
