moved FCC script
moved script below navbar code to remove spacing from top

--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
 
 <body>
   
-FCC Testing Link -->
-<script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+
  
 <!-- Start Of Navigation Bar-->
 <nav id="navbar" class="navbar navbar-expand-sm bg-dark navbar-dark sticky-top">
@@ -52,6 +51,9 @@ FCC Testing Link -->
   </ul>
 </nav>
 <!-- End of Navigation Bar -->
+
+<!-- FCC Testing Link -->
+<script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
 <!-- Start of Welcome Section -->
 <section id="welcome-section" class="welcome-section">
