--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
   <ul class="nav-list">
     <li>
       <a href="#"
-      class="btn contact-details">Frank S. Pelletier</a>
+      class="btn contact-details">Frank</a>
     </li>
     <li>
-      <a href="#about-me">About Me</a>
+      <a href="#about-me">About</a>
     </li>
     <li>
       <a href="#projects">Projects</a>
@@ -59,16 +59,18 @@
 <section id="welcome-section" class="welcome-section">
   <div class="container">
     <div class="row">
-      <div class="col-sm-8" id="intro-name">
+      <div class="col-lg" id="intro-name">
         <h1>I'm Frank S Pelletier</h1>
         <p id="sub-intro">A <del>detale</del>
            detail-oriented kinda guy</p>
       </div>
-      <div class="col-sm-4">
+      </div>
+      </div>
+      <div class="container">
+      <div class="row">
         <img class="selfie"
              src="images/tobeupdated5.png" 
              alt="picture of myself">
-      </div>
     </div>
   </div>
 </section>
