--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
 <section id="welcome-section" class="welcome-section">
   <div class="container">
     <div class="row">
-      <div class="col-lg" id="intro-name">
+      <!-- <div class="col"> -->
+      <div class="col" id="intro-name">
         <h1>I'm Frank S Pelletier</h1>
         <p id="sub-intro">A <del>detale</del>
            detail-oriented kinda guy</p>
@@ -272,7 +273,7 @@
 <!-- Start of Footer Section -->
 <footer>
   <p>
-    ** Work In Progress 
+    ** Work In Progress **
   </p>
   <p><a class="btn contact-details" href="https://codepen.io/freeCodeCamp/full/zNBOYG">
     &copy; FCC: Personal Portfolio
