--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Frank - Customer Extraodinaire</title>
+  <title>Frank S Pelletier</title>
+  <link rel="shortcut icon" type="image/x-icon" href="/images/1625962491.ico">
   
   <link
   rel="stylesheet"
