--- a/index.html
+++ b/index.html
@@ -81,22 +81,28 @@
 <!-- Start of About Me Section -->
 <section id="about-me" class="about-section">
   <div class="contact-section-header">
+    <div class="row">
+    <div class="box">
     <h2>Thanks for checking out my page!</h2>
     <p>Pleasure to meet you, virtually! I like to create and enhance where possible. 
       <br>Being able to help others and solve problems, seeking an answer.
       <br> As someone who thrives working with others, 
 </p>
+</div>
+<div class="box">
 <h2>What I have done so far:</h2> <br>
       <ul>
-      <li>Associates in Accounting with several years working under an accountant specializing in Tax Preparation and Financial Planning </li>
-      <li></li>
+       <li>2016: Associate's of Science In Accounting</li>
+       <li>2019: Bachelor's of Science in Management Information Systems</li>
+      <!-- <li>Associates in Accounting with several years working under an accountant specializing in Tax Preparation and Financial Planning </li>
         <ul>Bachelor's in Management Information System that involved leading and participating in multiple group project settings.</li>
         <li>
         Created a website for one of my jobs to help modernize them and give a better presence in the developing market around them.
-        </li>
+        </li> -->
       </ul> 
-      
-
+      </div>
+    </div>
+<div class="box">
       <h2>What I can do for you:</h2>
       <li>
         <h3><ul>Enhanced Communication</ul></h3>
@@ -105,6 +111,7 @@
         <ul>Carrying a strong GPA and work history, can be very adaptable in learning new situations to best meet the needs of organizations.</ul>
       </li>
   </div>
+</div>
 
 </section>
 <!-- End of About Me Section -->
@@ -220,7 +227,7 @@
   </div>
 
   <a
-    href="https://codepen.io/veltaine/"
+    href="https://github.com/veltaine"
     class="btn btn-show-all"
     target="_blank"
     >More<i class="fas fa-chevron-right"></i
