Added space for Odin Projects

--- a/index.html
+++ b/index.html
@@ -53,9 +53,6 @@
   </nav>
   <!-- End of Navigation Bar -->
   
-  <!-- FCC Testing Link -->
-  <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
-  
   <!-- Start of Welcome Section -->
   <section id="welcome-section" class="welcome-section">
     <div class="container">
@@ -197,6 +194,42 @@
           <span class="code">&#47;&gt;</span>
         </p>
       </a>
+      <a
+      href="https://github.com/veltaine/odin-recipes"
+      target="_blank"
+      class="project project-tile"
+      >
+      <img
+      class="project-image"
+      src="images/thumbnails/survey.png"
+      alt="timeline"
+      />
+      <p class="project-title">
+        <span class="code">&lt;</span>
+        FCC: Survey Form
+        <span class="code">&#47;&gt;</span>
+      </p>
+    </a>
+      
+    </div>
+    <h2>The Odin Project Assignments</h2>
+      <div class="projects-grid">
+      <a
+      href="https://github.com/veltaine/odin-recipes"
+      target="_blank"
+      class="project project-tile"
+      >
+      <img
+      class="project-image"
+      src="images/thumbnails/Odin-Recipes.png"
+      alt="timeline"
+      />
+      <p class="project-title">
+        <span class="code">&lt;</span>
+        Odin Recipes Brutalist (sans CSS)
+        <span class="code">&#47;&gt;</span>
+      </p>
+    </a>
       
     </div>
     <h2>Personal Projects</h2>
