--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
     
     
         <a
-      href="https://github.com/veltaine/odin-recipes"
+      href="https://veltaine.github.io/odin-recipes"
       target="_blank"
       class="project project-tile"
       >
@@ -214,61 +214,63 @@
       />
       <p class="project-title">
         <span class="code">&lt;</span>
-        Odin Recipes Brutalist (sans CSS)
+        Brutalist Recipe Website (no CSS)
         <span class="code">&#47;&gt;</span>
       </p>
     </a>
 
     <a
-    href="https://github.com/veltaine/odin-recipes"
+    href="https://github.com/veltaine"
     target="_blank"
     class="project project-tile"
     >
     <img
     class="project-image"
-    src="images/thumbnails/Odin-Recipes.png"
+    src="images/tobeupdated.jpg"
     alt="timeline"
     />
     <p class="project-title">
       <span class="code">&lt;</span>
-      Odin Recipes Brutalist (sans CSS)
+      Placeholder!
       <span class="code">&#47;&gt;</span>
     </p>
   </a>
 
   <a
-  href="https://github.com/veltaine/odin-recipes"
+  href="https://github.com/veltaine/"
   target="_blank"
   class="project project-tile"
   >
   <img
   class="project-image"
-  src="images/thumbnails/Odin-Recipes.png"
+  src="images/tobeupdated.jpg"
   alt="timeline"
   />
   <p class="project-title">
     <span class="code">&lt;</span>
-    Odin Recipes Brutalist (sans CSS)
+    Placeholder!
     <span class="code">&#47;&gt;</span>
   </p>
 </a>
 
 <a
-href="https://github.com/veltaine/odin-recipes"
+href="https://github.io/veltaine"
 target="_blank"
 class="project project-tile"
 >
 <img
 class="project-image"
-src="images/thumbnails/Odin-Recipes.png"
+src="images/tobeupdated.jpg"
 alt="timeline"
 />
 <p class="project-title">
   <span class="code">&lt;</span>
-  Odin Recipes Brutalist (sans CSS)
+  Placeholder!
   <span class="code">&#47;&gt;</span>
 </p>
 </a>
+
+
     </div>
 
     <h2>Personal Projects</h2>
