testing to fix layout

--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
       />
       <p class="project-title">
         <span class="code">&lt;</span>
-        Brutalist Recipe Website (no CSS)
+        Brutalist Recipe Website (no CSS)s
         <span class="code">&#47;&gt;</span>
       </p>
     </a>
