--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@ alt="timeline"
     <h2>Personal Projects</h2>
     <div class="projects-grid">
       <a
-      href="http://chinariver.biz"
+      href="https://veltaine.github.io/Restaurant-Template/"
       target="_blank"
       class="project project-tile"
       >
