--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@ alt="timeline"
       </p>
     </a>
     <a
-    href="https://veltaine.github.io/chaff2treasure-landing/"
+    href="https://veltaine.github.io/Chaff2Treasure/"
     target="_blank"
     class="project project-tile"
     >
