Updated thumbnail for odin recipe page

--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@ alt="timeline"
     <h2>Personal Projects</h2>
     <div class="projects-grid">
       <a
-      href="http://chinariver.biz"
+      href="https://veltaine.github.io/Restaurant-Template/"
       target="_blank"
       class="project project-tile"
       >
@@ -419,7 +419,7 @@ target="_blank"
     ><i class="fab fa-github"></i> GitHub</a
     >
     <a
-    href="https://twitter.com/gveltaine"
+    href="https://twitter.com/veltaine"
     target="_blank"
     class="btn contact-details"
     ><i class="fab fa-twitter"></i> Twitter</a
@@ -427,7 +427,7 @@ target="_blank"
     <a href="mailto:fspellet+portfolio@gmail.com" class="btn contact-details"
     ><i class="fas fa-at"></i> Send a mail</a
     >
-    <a href="tel:978-406-1650" class="btn contact-details"
+    <a href="tel:978-561-9509" class="btn contact-details"
     ><i class="fas fa-mobile-alt"></i> Call me</a
     >
     <a class="btn contact-details"
