updated placeholder images and the intro section for better flow

--- a/index.html
+++ b/index.html
@@ -88,7 +88,6 @@
         <div class="contact-section-header">
           <div class="row">
             <div class="box">
-            <h2>Thanks for checking out my page!</h2>
             <p>Pleasure to meet you, virtually! I like to create and enhance where possible. 
               Solving problems is one of my biggest passions, and working in customer service, I've learned many ways to be able to do this.
               
@@ -101,22 +100,22 @@
               <ul>
                 <li>2016: Associate's of Science In Accounting</li>
                 <li>2019: Bachelor's of Science in Management Information Systems</li>
-                <!-- <li>Associates in Accounting with several years working under an accountant specializing in Tax Preparation and Financial Planning </li>
+                <li>Associates in Accounting with several years working under an accountant specializing in Tax Preparation and Financial Planning </li>
                   <ul>Bachelor's in Management Information System that involved leading and participating in multiple group project settings.</li>
                     <li>
                       Created a website for one of my jobs to help modernize them and give a better presence in the developing market around them.
-                    </li> -->
+                    </li> 
                   </ul> 
                 </div>
-                <div class="box">
-                  <h2>What I can do for you:</h2>
+                <!-- <div class="box">
+
                   <li>
                     <h3><ul>Enhanced Communication</ul></h3>
                     <ul> Strong interpersonal and client skills. With a strong history of working in customer service, I've learned the essentials of having to work</ul>
                     <h3><ul>Strong Work Ethic</ul></h3>
                     <ul>Carrying a strong GPA and work history, can be very adaptable in learning new situations to best meet the needs of organizations.</ul>
                   </li>
-                </div>
+                </div> -->
               </div>
             </div>
             
@@ -226,12 +225,12 @@
     >
     <img
     class="project-image"
-    src="images/tobeupdated.jpg"
+    src="images/placeholder.jpg"
     alt="timeline"
     />
     <p class="project-title">
       <span class="code">&lt;</span>
-      Placeholder!
+      Placeholder
       <span class="code">&#47;&gt;</span>
     </p>
   </a>
@@ -243,12 +242,12 @@
   >
   <img
   class="project-image"
-  src="images/tobeupdated.jpg"
+  src="images/placeholder.jpg"
   alt="timeline"
   />
   <p class="project-title">
     <span class="code">&lt;</span>
-    Placeholder!
+    Placeholder
     <span class="code">&#47;&gt;</span>
   </p>
 </a>
@@ -260,12 +259,12 @@ class="project project-tile"
 >
 <img
 class="project-image"
-src="images/tobeupdated.jpg"
+src="images/placeholder.jpg"
 alt="timeline"
 />
 <p class="project-title">
   <span class="code">&lt;</span>
-  Placeholder!
+  Placeholder
   <span class="code">&#47;&gt;</span>
 </p>
 </a>
