Added secondary restaurant template to project page

--- a/index.html
+++ b/index.html
@@ -37,8 +37,7 @@
   <nav id="navbar" class="navbar navbar-expand-sm bg-dark navbar-dark sticky-top">
     <ul class="nav-list">
       <li>
-        <a href="#"
-        class="btn contact-details">Frank</a>
+        <a href="#">Home</a>
       </li>
       <li>
         <a href="#about-me">About</a>
@@ -58,7 +57,7 @@
     <div class="container">
       <div class="row">
           <div class="box" id="intro-name">
-            <h2>Hi, I'm Frank S Pelletier</h2>
+            <h2>Hi, I'm Frank S Pelletier!</h2>
             <p id="sub-intro">A <del>detale</del>
               detail-oriented team oriented person who seeks to make the world a more enjoyable place one solution at a time.</p>
           </div>
@@ -290,6 +289,22 @@ alt="timeline"
         <span class="code">&#47;&gt;</span>
       </p>
     </a>
+    <a
+    href="https://veltaine.github.io/SecondRestaurantTemplate/"
+    target="_blank"
+    class="project project-tile"
+    >
+    <img
+    class="project-image"
+    src="images/thumbnails/SecondaryRestaurant.png"
+    alt="project"
+    />
+    <p class="project-title">
+      <span class="code">&lt;</span>
+      China River Website (Final Revision)
+      <span class="code">&#47;&gt;</span>
+    </p>
+  </a>
     <a
     href="https://veltaine.github.io/Chaff2Treasure/"
     target="_blank"
