Added Landing page thumbnail and link to project list for Odin Foundation course

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
     </div>
 
 
-    <h2>The Odin Project Assignments</h2>
+    <h2>The Odin Project Foundation</h2>
       <div class="projects-grid">
     
     
@@ -212,24 +212,24 @@
       />
       <p class="project-title">
         <span class="code">&lt;</span>
-        Brutalist Recipe Website (no CSS)s
+        Brutalist Recipe Website
         <span class="code">&#47;&gt;</span>
       </p>
     </a>
 
     <a
-    href="https://github.com/veltaine"
+    href="https://veltaine.github.io/FoundationsLandingPage/"
     target="_blank"
     class="project project-tile"
     >
     <img
     class="project-image"
-    src="images/placeholder.jpg"
+    src="images/thumbnails/FoundationsLandingPage.png"
     alt="timeline"
     />
     <p class="project-title">
       <span class="code">&lt;</span>
-      Placeholder
+      Product Landing Page (WIP)
       <span class="code">&#47;&gt;</span>
     </p>
   </a>
