minor adjustments to text on projects

--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@ alt="timeline"
     />
     <p class="project-title">
       <span class="code">&lt;</span>
-      China River Website (Final Revision)
+      China River Website (Final Version)
       <span class="code">&#47;&gt;</span>
     </p>
   </a>
